style.css
/*
 * Theme Name: FinlayDaG33k
 * Theme URI: https://www.finlaydag33k.nl
 * Author: Aroop "FinlayDaG33k" Roelofs
 * Author URI: https://www.finlaydag33k.nl
 * Description: Custom made theme for my blog :)
 * Version: 0.1
 * License: GNU General Public License v4 or later
 * License URI: http://www.gnu.org/licenses/gpl-3.0.html
 * Tags: idk
 * Text Domain: finlaydag33k
 *
 * This theme, is licenced under the "FinlayDaG33k License" (Yes, it's my own frigging license lmao)
 * Use it to make something cool, have fun, and share what you've learned with others.
 */

/*
 * "THE FINLAYDAG33K LICENSE" (Revision 1), Based on the "BEERWARE LICENSE":
 * <Aroop "FinlayDaG33k" Roelofs> wrote this file.
 * As long as you retain this notice you can do whatever you want with this stuff.
 * If we meet some day, you should buy me a drink.
 * Hugs are mandatory when meeting me!
 * Aroop "FinlayDaG33k" Roelofs
 */

html,body {
  position: relative;
  min-height: 100%;
	height: 100%;
	font-smoothing: antialiased;
}
#wrap {
  /* Margin bottom by footer height */
  margin-bottom: 128px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

.container .text-muted {
  margin: 20px 0;
}

.wrapper {
  height: 100%;
	margin-bottom: 128px;
}

.blog-footer {
	margin-top: 128px;
  padding: 2.5rem 0;
  text-align: center;
  border-top: .05rem solid #e5e5e5;
}


.widget ul li {
  list-style: none;
  border-bottom: 1px solid #F2F2F2;
  margin-bottom: 10px;
  padding-bottom: 10px;
}

/* Comments list */
.comment-content a {
  word-wrap: break-word;
}
.bypostauthor {
}
#respond {
  background-color: transparent !important;
  box-shadow: none !important;
  padding: 0px !important;
}
#respond > p, #respond p.comment-notes, p.logged-in-as {
  margin-bottom: 10px;
}

p.logged-in-as {
  padding-bottom: 0px;
}
.comment-list {
  margin-bottom: 40px !important;
  margin-left: 0px !important;
  padding-left: 0;
}
.comment-list,
.comment-list .children {
    list-style: none;
}
.comment .comment-body {
  background-color: #ffffff;
  margin: 0;
  overflow: hidden;
  padding: 25px;
  margin-top: 2em;
  padding-left: 100px;
  position: relative;
  border: 1px solid #E8E8E8;
  border-bottom: 1px solid #DADADA;
  border-radius: 4px;
}
.comment-list .children {
  margin-left: 0px!important;
  padding-left: 40px;
  border-left: 1px solid #DADADA;
  background-repeat: no-repeat;
  background-position: left 20px;
}
.comment-list li.comment > div img.avatar {
  position: absolute;
  left: 29px;
  top: 29px;
}
#comment-form-title {
  font-size: 24px;
  padding-bottom: 10px;
}
.comment-author.vcard {
  font-size: 12px;
}
.vcard .avatar {
  position: absolute;
  left: 20px;
  top: 29px;
  border-radius: 2px;
}
.comment-metadata {
  font-size: 11px;
  line-height: 16px;
  margin-bottom: 10px;
}
.comment-reply-link {
  float: right;
}
.form-allowed-tags code {
  word-wrap: break-word;
  white-space: inherit;
}
.comment-respond label {
  display: block;
  font-weight: normal;
}
.comment-respond .required {
  color: #C7254E;
}
#submit {
  font-size: 12px;
}
.comment-navigation,
.single .nav-links {
  overflow: hidden;
  margin-top: 30px;
}
.comment-reply-title {
  font-size: 14px;
}
.comment-reply-link {
  background: #C1C0C0;
  border: #C1C0C0;
  font-size: 10px;
  text-transform: uppercase;
}
@media(max-width:767px){
  .post-inner-content {
    padding: 20px 25px;
  }
  .comment-list .children {
    padding-left: 10px;
  }
}

/* Sidebar */
#sidebar {
	min-height: 500px;
  height: 100%;
  right: 0;
}
#sidebar .widget {
  margin-bottom: 50px;
  color: #C1C0C0;
  overflow: hidden;
}
#sidebar .widget_archive ul li:before,
#secondary .widget_categories ul li:before,
#secondary .widget_recent_comments ul li:before {
  font-family: FontAwesome;
  margin-right: 10px;
}
#sidebar .widget_top-posts ul li:before {
	font-family: FontAwesome;
  content: "\f02d";
}
#sidebar .widget_archive ul li:before {
	font-family: FontAwesome;
  content: "\f073";
}
#sidebar .widget_categories ul li:before {
	font-family: FontAwesome;
  content: "\f115";
}
#sidebar .widget_recent_comments ul li:before {
	font-family: FontAwesome;
  content: "\f0e5";
}

/* Panels */
.panel-body-summary  {
	word-break: break-all;
}

.panel-body-full  {
	word-break: normal;
	overflow: auto;
}

.panel-body img{
	max-height: 100%;
  max-width: 100%;
}

/* Flexbox */
.equal {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

div[class*='col-'] {
  flex:1 1 auto;
  display: flex;
}
.panel {
  flex:1 0 100%;
}

.caret-right {
  border-bottom: 4px solid transparent;
  border-top: 4px solid transparent;
  border-left: 4px solid;
  display: inline-block;
  height: 0;
  opacity: 0.3;
  width: 0;
	margin-left: 2px;
	vertical-align: middle;
}

.dropdown-submenu {
  position: relative;
}

.dropdown-submenu .dropdown-menu {
  top: 0;
  left: 100%;
  margin-top: -5px;
  margin-left: -1px;
}

